--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,15 @@
     "version": "1.0",
     "manifest_version": 2,
     "description": "Rockin'.",
-    "background": { "scripts": ["popup.js"] },
     "browser_action": {
-      "default_icon": "icon.png"
-    },
-    "permissions": [
-        "tabs", "http://*/*"
+       "default_icon": "icon.png",
+       "default_popup": "popup.html"
+     },
+    "content_scripts": [
+        {
+          "matches": ["http://www.youtube.com/watch?v=*"],
+          "js": ["popcorn.js", "mousetrap.js", "popup.js"],
+          "run_at": "document_end"
+        }
     ]
 }
