--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,12 @@
     "content_scripts": [
         {
           "matches": ["http://www.youtube.com/watch?v=*"],
-          "js": ["popcorn.js", "mousetrap.js", "popup.js"],
+          "js": ["popcorn.js", "mousetrap.js", "jquery.js", "popup.js"],
           "run_at": "document_end"
         }
+    ],
+    "permissions" : [
+        "tabs"
     ]
+    
 }
